--- a/src/main/resources/common/plugin-settings.template.html
+++ b/src/main/resources/common/plugin-settings.template.html
@@ -1,4 +1,19 @@
 <div class="form_item_block">
+    <label>Go API Server Host:</label>
+    <input type="text" ng-model="go_api_server_host" ng-required="true"/>
+    <span class="form_error" ng-show="GOINPUTNAME[go_api_server_host].$error.server">{{ GOINPUTNAME[go_api_server_host].$error.server }}</span>
+</div>
+<div class="form_item_block">
+    <label>Go API Username:</label>
+    <input type="text" ng-model="go_api_username" ng-required="true"/>
+    <span class="form_error" ng-show="GOINPUTNAME[go_api_username].$error.server">{{ GOINPUTNAME[go_api_username].$error.server }}</span>
+</div>
+<div class="form_item_block">
+    <label>Go API Password:</label>
+    <input type="password" ng-model="go_api_password" ng-required="true"/>
+    <span class="form_error" ng-show="GOINPUTNAME[go_api_password].$error.server">{{ GOINPUTNAME[go_api_password].$error.server }}</span>
+</div>
+<div class="form_item_block">
     <label>Server Base URL:</label>
     <input type="text" ng-model="server_base_url" ng-required="true"/>
     <span class="form_error" ng-show="GOINPUTNAME[server_base_url].$error.server">{{ GOINPUTNAME[server_base_url].$error.server }}</span>
@@ -24,6 +39,21 @@
     <span class="form_error" ng-show="GOINPUTNAME[oauth_token].$error.server">{{ GOINPUTNAME[oauth_token].$error.server }}</span>
 </div>
 <div class="form_item_block">
+    <label>Go API Server Host:</label>
+    <input type="text" ng-model="go_api_server_host" ng-required="true"/>
+    <span class="form_error" ng-show="GOINPUTNAME[go_api_server_host].$error.server">{{ GOINPUTNAME[go_api_server_host].$error.server }}</span>
+</div>
+<div class="form_item_block">
+    <label>Go API Username:</label>
+    <input type="text" ng-model="go_api_username" ng-required="true"/>
+    <span class="form_error" ng-show="GOINPUTNAME[go_api_username].$error.server">{{ GOINPUTNAME[go_api_username].$error.server }}</span>
+</div>
+<div class="form_item_block">
+    <label>Go API Password:</label>
+    <input type="password" ng-model="go_api_password" ng-required="true"/>
+    <span class="form_error" ng-show="GOINPUTNAME[go_api_password].$error.server">{{ GOINPUTNAME[go_api_password].$error.server }}</span>
+</div>
+<div class="form_item_block">
     <label>Results</label>
     <div class="checkbox_row">
         <label><input type="checkbox" ng-model="result_failed" ng-true-value="on" ng-required="false"/>Failed</label>
@@ -32,4 +62,12 @@
         <label><input type="checkbox" ng-model="result_unknown" ng-true-value="on" ng-required="false"/>Unknown</label>
     </div>
     <span class="form_error" ng-show="GOINPUTNAME[status].$error.server">{{ GOINPUTNAME[oauth_token].$error.server }}</span>
+</div>
+<div class="form_item_block">
+    <label>Notifying:</label>
+    <div class="checkbox_row">
+        <label><input type="checkbox" ng-model="pass_at_end" ng-true-value="on" ng-required="false"/>
+            Pass pipeline only after all stages are complete
+        </label>
+    </div>
 </div>
